--- a/KISAutoEquip/KISAutoEquip.csproj
+++ b/KISAutoEquip/KISAutoEquip.csproj
@@ -27,7 +27,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\GameData\Plugins\</OutputPath>
+    <OutputPath>..\GameData\kOS-EVA\Plugins\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
