Update to the Version

--- a/kOS-EVA/kOS-EVA.csproj
+++ b/kOS-EVA/kOS-EVA.csproj
@@ -71,6 +71,10 @@
     <Compile Include="KerbalEVAUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="kOS-EVA.version" />
+    <None Include="Readme.md" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
